--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-    <header style="display: none;" class="header">
+    <header  class="header">
       <div class="navbar container">
         <div class="left_head">
           <h1>BOXCARS</h1>
@@ -91,7 +91,7 @@
       </div>
     </header>
 
-    <div style="display: none;" class="head">
+    <div  class="head">
       <div class="head-top">
         <p>Find cars for sale and for rent near you</p>
         <h1>Find Your Dream Car</h1>
@@ -132,7 +132,7 @@
       </div>
     </div>
 
-    <div style="display: none;" class="browse">
+    <div  class="browse">
       <div class="browse-top">
         <h1>Browse by Type</h1>
       </div>
@@ -202,7 +202,7 @@
       </div>
     </div>
 
-    <div style="display: none;" class="most">
+    <div  class="most">
       <div class="most-top">
         <h1>The Most Searched Cars</h1>
       </div>
@@ -221,7 +221,7 @@
       </div>
     </div>
 
-    <div style="display: none;" class="choose container">
+    <div  class="choose container">
       <div class="choose-top">
         <h1>Why Choose Us?</h1>
       </div>
@@ -265,7 +265,7 @@
       </div>
     </div>
 
-    <div style="display: none;" class="latest">
+    <div  class="latest">
       <div class="latest-top">
         <h1>Latest Cars</h1>
       </div>
@@ -278,7 +278,7 @@
     </div>
 
     <div class="great container">
-      <div class="great-top">
+      <center>      <div class="great-top">
         <h1>Need Some Inspiration?</h1>
         <div class="buttons">
           <button>Automatics Cars</button>
@@ -288,9 +288,9 @@
           <button>Petrol</button>
           <button>Diesel</button>
         </div>
-      </div>
+      </div></center>
 
-      <div class="great-wrapper">
+      <div   class="great-wrapper">
         <div class="great-left">
           <h1>Who is BoxCar</h1>
           <p>Excepteur sint occaecat cupidatat non
@@ -360,7 +360,7 @@
         </div>
       </div>
 
-      <div class="premium">
+      <div  class="premium">
         <div class="premium-left">
           <h1>Explore Our Premium
             Brands</h1>
