--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <header data-aos="fade-down"  class="header">
+    <header data-aos="fade-down" class="header">
       <div class="navbar container">
         <div class="left_head">
           <h1>BOXCARS</h1>
@@ -93,7 +93,7 @@
       </div>
     </header>
 
-    <div  data-aos="fade-right" class="head">
+    <div data-aos="fade-right" class="head">
       <div class="head-top">
         <p>Find cars for sale and for rent near you</p>
         <h1>Find Your Dream Car</h1>
@@ -127,14 +127,16 @@
         </button>
       </div>
 
-      <div class="head-bottom">
+      <div  data-aos="fade-left" class="head-bottom">
         <center>
-          <img src="./images/head-img.png" alt="" />
+          <img  data-aos="fade-left"
+          data-aos-duration="3000"
+           src="./images/head-img.png" alt="" />
         </center>
       </div>
     </div>
 
-    <div  data-aos="fade-down-right" class="browse">
+    <div data-aos="fade-down-right" class="browse">
       <div class="browse-top">
         <h1>Browse by Type</h1>
       </div>
@@ -280,30 +282,33 @@
     </div>
 
     <div data-aos="zoom-out-up" class="great container">
-      <center>      <div class="great-top">
-        <h1>Need Some Inspiration?</h1>
-        <div class="buttons">
-          <button>Automatics Cars</button>
-          <button>SUVs</button>
-          <button>Electrics Cars</button>
-          <button>New in Stock</button>
-          <button>Petrol</button>
-          <button>Diesel</button>
+      <center>
+        <div class="great-top">
+          <h1>Need Some Inspiration?</h1>
+          <div class="buttons">
+            <button>Automatics Cars</button>
+            <button>SUVs</button>
+            <button>Electrics Cars</button>
+            <button>New in Stock</button>
+            <button>Petrol</button>
+            <button>Diesel</button>
+          </div>
         </div>
-      </div></center>
+      </center>
 
-      <div   class="great-wrapper">
+      <div class="great-wrapper">
         <div class="great-left">
           <h1>Who is BoxCar</h1>
-          <p>Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt
-            mollit anim id es</p>
+          <p>
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+            officia deserunt mollit anim id es
+          </p>
         </div>
         <div class="great-right">
-          <img src="./images/great1.png" alt="">
-          <img src="./images/great2.png" alt="">
-          <img src="./images/great3.png" alt="">
-          </div>
+          <img src="./images/great1.png" alt="" />
+          <img src="./images/great2.png" alt="" />
+          <img src="./images/great3.png" alt="" />
+        </div>
       </div>
     </div>
 
@@ -313,19 +318,19 @@
       </div>
 
       <div class="team-wrapper">
-        <div  data-aos="zoom-out-right" class="team-card team1">
+        <div data-aos="zoom-out-right" class="team-card team1">
           <h3>Courtney Henry</h3>
           <p>Development Manager</p>
         </div>
-        <div  data-aos="zoom-out-right" class="team-card team2">
+        <div data-aos="zoom-out-right" class="team-card team2">
           <h3>Jerome Bell</h3>
           <p>Software Developer</p>
         </div>
-        <div  data-aos="zoom-out-right" class="team-card team3">
-        <h3>Jerome Bell</h3>
-        <p>Software Tester </p>
+        <div data-aos="zoom-out-right" class="team-card team3">
+          <h3>Jerome Bell</h3>
+          <p>Software Tester</p>
         </div>
-        <div  ata-aos="zoom-in-left" class="team-card team4">
+        <div ata-aos="zoom-in-left" class="team-card team4">
           <h3>Arlene McCoy</h3>
           <p>Arlene McCoy</p>
         </div>
@@ -336,127 +341,129 @@
       </div>
     </div>
 
-      <div data-aos="zoom-out-down" class="blog">
-        <div class="blog-top">
-          <h1>Latest Blog Posts</h1>
+    <div data-aos="zoom-out-down" class="blog">
+      <div class="blog-top">
+        <h1>Latest Blog Posts</h1>
+      </div>
+      <div class="blog-wrapper">
+        <div class="blog-card">
+          <img src="./images/latest1.png" alt="" />
+          <p>admin <span>November 22, 2023</span></p>
+          <h3>2024 BMW ALPINA XB7 with exclusive details, extraordinary</h3>
         </div>
-        <div class="blog-wrapper">
-          <div class="blog-card">
-            <img src="./images/latest1.png" alt="">
-            <p>admin  <span>November 22, 2023</span></p>
-            <h3>2024 BMW ALPINA XB7 with exclusive details,
-              extraordinary</h3>
-          </div>
-          <div class="blog-card">
-            <img src="./images/latest2.png" alt="">
-            <p>admin  <span>November 22, 2023</span></p>
-            <h3>BMW X6 M50i is designed to exceed your
-              sportiest.</h3>
-          </div>
-          <div class="blog-card">
-            <img src="./images/latest3.png" alt="">
-            <p>admin  <span>November 22, 2023</span></p>
-            <h3>BMW X5 Gold 2024 Sport Review: Light on
-              Sport</h3>
-          </div>
+        <div class="blog-card">
+          <img src="./images/latest2.png" alt="" />
+          <p>admin <span>November 22, 2023</span></p>
+          <h3>BMW X6 M50i is designed to exceed your sportiest.</h3>
+        </div>
+        <div class="blog-card">
+          <img src="./images/latest3.png" alt="" />
+          <p>admin <span>November 22, 2023</span></p>
+          <h3>BMW X5 Gold 2024 Sport Review: Light on Sport</h3>
         </div>
       </div>
+    </div>
 
-      <div data-aos="fade-up"
-      data-aos-duration="3000" class="premium">
-        <div class="premium-left">
-          <h1>Explore Our Premium
-            Brands</h1>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-              deserunt mollit anim id es</p>
-              <button>Show All Brands</button>
-        </div>
-        <img src="./images/premium.png" alt="">
+    <div data-aos="fade-up" data-aos-duration="3000" class="premium">
+      <div class="premium-left">
+        <h1>Explore Our Premium Brands</h1>
+        <p>
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+          officia deserunt mollit anim id es
+        </p>
+        <button>Show All Brands</button>
       </div>
+      <img src="./images/premium.png" alt="" />
+    </div>
 
-      <div data-aos="fade-right"
+    <div
+      data-aos="fade-right"
       data-aos-offset="300"
-      data-aos-easing="ease-in-sine" class="subscribe">
-        <h1>Join BoxCar</h1>
-        <p>Receive pricing updates, shopping tips & more!</p>
-        <div class="subscribe-wrapper">
-          <input type="text" placeholder="Your email address">  
-          <button>Sign Up</button>
+      data-aos-easing="ease-in-sine"
+      class="subscribe"
+    >
+      <h1>Join BoxCar</h1>
+      <p>Receive pricing updates, shopping tips & more!</p>
+      <div class="subscribe-wrapper">
+        <input type="text" placeholder="Your email address" />
+        <button>Sign Up</button>
       </div>
-      </div>
+    </div>
 
-      <footer  data-aos="fade-down"
+    <footer
+      data-aos="fade-down"
       data-aos-easing="linear"
-      data-aos-duration="1500">
-        <div class="footer container">
-          <div class="footer-column">
-              <h3>Company</h3>
-              <ul>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Blog</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">FAQs</a></li>
-                  <li><a href="#">Terms</a></li>
-                  <li><a href="#">Contact Us</a></li>
-              </ul>
+      data-aos-duration="1500"
+    >
+      <div class="footer container">
+        <div class="footer-column">
+          <h3>Company</h3>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">FAQs</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="#">Get in Touch</a></li>
+            <li><a href="#">Help Center</a></li>
+            <li><a href="#">Live Chat</a></li>
+            <li><a href="#">How It Works</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h3>Our Brands</h3>
+          <ul>
+            <li><a href="#">Toyota</a></li>
+            <li><a href="#">Porsche</a></li>
+            <li><a href="#">Audi</a></li>
+            <li><a href="#">BMW</a></li>
+            <li><a href="#">Ford</a></li>
+            <li><a href="#">Nissan</a></li>
+            <li><a href="#">Peugeot</a></li>
+            <li><a href="#">Volkswagen</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h3>Vehicles Type</h3>
+          <ul>
+            <li><a href="#">Sedan</a></li>
+            <li><a href="#">Hatchback</a></li>
+            <li><a href="#">SUV</a></li>
+            <li><a href="#">Hybrid</a></li>
+            <li><a href="#">Electric</a></li>
+            <li><a href="#">Coupe</a></li>
+            <li><a href="#">Truck</a></li>
+            <li><a href="#">Convertible</a></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h3>Sale Hours</h3>
+          <ul>
+            <li>Monday - Friday: 09:00AM - 09:00PM</li>
+            <li>Saturday: 09:00AM - 07:00PM</li>
+            <li>Sunday: Closed</li>
+          </ul>
+          <h3>Connect With Us</h3>
+          <div class="social-icons">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-invision"></i></a>
           </div>
-          <div class="footer-column">
-              <h3>Quick Links</h3>
-              <ul>
-                  <li><a href="#">Get in Touch</a></li>
-                  <li><a href="#">Help Center</a></li>
-                  <li><a href="#">Live Chat</a></li>
-                  <li><a href="#">How It Works</a></li>
-              </ul>
-          </div>
-          <div class="footer-column">
-              <h3>Our Brands</h3>
-              <ul>
-                  <li><a href="#">Toyota</a></li>
-                  <li><a href="#">Porsche</a></li>
-                  <li><a href="#">Audi</a></li>
-                  <li><a href="#">BMW</a></li>
-                  <li><a href="#">Ford</a></li>
-                  <li><a href="#">Nissan</a></li>
-                  <li><a href="#">Peugeot</a></li>
-                  <li><a href="#">Volkswagen</a></li>
-              </ul>
-          </div>
-          <div class="footer-column">
-              <h3>Vehicles Type</h3>
-              <ul>
-                  <li><a href="#">Sedan</a></li>
-                  <li><a href="#">Hatchback</a></li>
-                  <li><a href="#">SUV</a></li>
-                  <li><a href="#">Hybrid</a></li>
-                  <li><a href="#">Electric</a></li>
-                  <li><a href="#">Coupe</a></li>
-                  <li><a href="#">Truck</a></li>
-                  <li><a href="#">Convertible</a></li>
-              </ul>
-          </div>
-          <div class="footer-column">
-              <h3>Sale Hours</h3>
-              <ul>
-                  <li>Monday - Friday: 09:00AM - 09:00PM</li>
-                  <li>Saturday: 09:00AM - 07:00PM</li>
-                  <li>Sunday: Closed</li>
-              </ul>
-              <h3>Connect With Us</h3>
-              <div class="social-icons">
-                  <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                  <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                  <a href="#"><i class="fa-brands fa-invision"></i></a>
-              </div>
-          </div>
+        </div>
       </div>
-      </footer>
+    </footer>
 
-      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-      <script>
-        AOS.init();
-      </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="/script.js"></script>
-  </body> 
+  </body>
 </html>
