--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <header data-aos="fade-down" class="header">
+    <header  class="header">
       <div class="navbar container">
         <div class="left_head">
           <h1>BOXCARS</h1>
@@ -93,7 +93,7 @@
       </div>
     </header>
 
-    <div data-aos="fade-right" class="head">
+    <div data-aos="fade-up" class="head">
       <div class="head-top">
         <p>Find cars for sale and for rent near you</p>
         <h1>Find Your Dream Car</h1>
@@ -127,16 +127,15 @@
         </button>
       </div>
 
-      <div  data-aos="fade-left" class="head-bottom">
+      <div class="head-bottom">
         <center>
-          <img  data-aos="fade-left"
-          data-aos-duration="3000"
+          <img
            src="./images/head-img.png" alt="" />
         </center>
       </div>
     </div>
 
-    <div data-aos="fade-down-right" class="browse">
+    <div data-aos="zoom-in" class="browse">
       <div class="browse-top">
         <h1>Browse by Type</h1>
       </div>
@@ -206,7 +205,7 @@
       </div>
     </div>
 
-    <div data-aos="zoom-in" class="most">
+    <div data-aos="zoom-in-up"  class="most">
       <div class="most-top">
         <h1>The Most Searched Cars</h1>
       </div>
@@ -218,10 +217,126 @@
       </ul>
 
       <div class="most-wrapper">
-        <img src="./images/most1.png" alt="" />
-        <img src="./images/most2.png" alt="" />
-        <img src="./images/most3.png" alt="" />
-        <img src="./images/most4.png" alt="" />
+        <div class="most-card">
+          <div class="card-top">
+            <img src="./images/latest1.png" alt="">
+          </div>
+          <h3>T-Cross – 2023</h3>
+          <p>4.0 D5 PowerPulse Momentum 5dr AWD…</p>
+          <div class="icon-wrapper">
+            <div class="card-icon">
+              <img src="./images/card-icon1.png" alt=""><br>
+              <span>15 Miles</span>
+            </div>
+            <div class="card-icon">
+              <img src="./images/card-icon2.png" alt=""><br>
+              <span>15 Miles</span>
+            </div>
+            <div class="card-icon">
+              <img src="./images/card-icon3.png" alt=""><br>
+              <span>CVT</span>
+            </div>
+          </div>
+          <div class="text">
+            <div class="text-l">
+            <h3>$15,000</h3>
+
+            </div>
+            <div class="text-r">
+              <p>View Details</p>
+            </div>
+            </div>
+        </div>
+        <div class="most-card">
+          <div class="card-top">
+            <img src="./images/latest2.png" alt="">
+          </div>
+          <h3>T-Cross – 2023</h3>
+          <p>4.0 D5 PowerPulse Momentum 5dr AWD…</p>
+          <div class="icon-wrapper">
+            <div class="card-icon">
+              <img src="./images/card-icon1.png" alt=""><br>
+              <span>15 Miles</span>
+            </div>
+            <div class="card-icon">
+              <img src="./images/card-icon2.png" alt=""><br>
+              <span>15 Miles</span>
+            </div>
+            <div class="card-icon">
+              <img src="./images/card-icon3.png" alt=""><br>
+              <span>CVT</span>
+            </div>
+          </div>
+          <div class="text">
+            <div class="text-l">
+            <h3>$15,000</h3>
+
+            </div>
+            <div class="text-r">
+              <p>View Details</p>
+            </div>
+            </div>
+        </div>
+        <div class="most-card">
+          <div class="card-top">
+            <img src="./images/latest3.png" alt="">
+          </div>
+          <h3>T-Cross – 2023</h3>
+          <p>4.0 D5 PowerPulse Momentum 5dr AWD…</p>
+          <div class="icon-wrapper">
+            <div class="card-icon">
+              <img src="./images/card-icon1.png" alt=""><br>
+              <span>15 Miles</span>
+            </div>
+            <div class="card-icon">
+              <img src="./images/card-icon2.png" alt=""><br>
+              <span>15 Miles</span>
+            </div>
+            <div class="card-icon">
+              <img src="./images/card-icon3.png" alt=""><br>
+              <span>CVT</span>
+            </div>
+          </div>
+          <div class="text">
+            <div class="text-l">
+            <h3>$15,000</h3>
+
+            </div>
+            <div class="text-r">
+              <p>View Details</p>
+            </div>
+            </div>
+        </div>
+        <div class="most-card">
+          <div class="card-top">
+            <img src="./images/latest4.png" alt="">
+          </div>
+          <h3>T-Cross – 2023</h3>
+          <p>4.0 D5 PowerPulse Momentum 5dr AWD…</p>
+          <div class="icon-wrapper">
+            <div class="card-icon">
+              <img src="./images/card-icon1.png" alt=""><br>
+              <span>15 Miles</span>
+            </div>
+            <div class="card-icon">
+              <img src="./images/card-icon2.png" alt=""><br>
+              <span>15 Miles</span>
+            </div>
+            <div class="card-icon">
+              <img src="./images/card-icon3.png" alt=""><br>
+              <span>CVT</span>
+            </div>
+          </div>
+          <div class="text">
+            <div class="text-l">
+            <h3>$15,000</h3>
+
+            </div>
+            <div class="text-r">
+              <p>View Details</p>
+            </div>
+            </div>
+        </div>
       </div>
     </div>
 
@@ -269,19 +384,135 @@
       </div>
     </div>
 
-    <div data-aos="zoom-out" class="latest">
+    <div class="latest">
       <div class="latest-top">
         <h1>Latest Cars</h1>
       </div>
-      <div class="latest-wrapper">
-        <img src="./images/most1.png" alt="" />
-        <img src="./images/most2.png" alt="" />
-        <img src="./images/most3.png" alt="" />
-        <img src="./images/most4.png" alt="" />
+      <div data-aos="zoom-in-down" class="latest-wrapper">
+        <div class="latest-card">
+          <div class="card-top">
+            <img src="./images/latest1.png" alt="">
+          </div>
+          <h3>T-Cross – 2023</h3>
+          <p>4.0 D5 PowerPulse Momentum 5dr AWD…</p>
+          <div class="icon-wrapper">
+            <div class="card-icon">
+              <img src="./images/card-icon1.png" alt=""><br>
+              <span>15 Miles</span>
+            </div>
+            <div class="card-icon">
+              <img src="./images/card-icon2.png" alt=""><br>
+              <span>15 Miles</span>
+            </div>
+            <div class="card-icon">
+              <img src="./images/card-icon3.png" alt=""><br>
+              <span>CVT</span>
+            </div>
+          </div>
+          <div class="text">
+            <div class="text-l">
+            <h3>$15,000</h3>
+
+            </div>
+            <div class="text-r">
+              <p>View Details</p>
+            </div>
+            </div>
+        </div>
+        <div  class="latest-card">
+          <div class="card-top">
+            <img src="./images/latest2.png" alt="">
+          </div>
+          <h3>T-Cross – 2023</h3>
+          <p>4.0 D5 PowerPulse Momentum 5dr AWD…</p>
+          <div class="icon-wrapper">
+            <div class="card-icon">
+              <img src="./images/card-icon1.png" alt=""><br>
+              <span>15 Miles</span>
+            </div>
+            <div class="card-icon">
+              <img src="./images/card-icon2.png" alt=""><br>
+              <span>15 Miles</span>
+            </div>
+            <div class="card-icon">
+              <img src="./images/card-icon3.png" alt=""><br>
+              <span>CVT</span>
+            </div>
+          </div>
+          <div class="text">
+            <div class="text-l">
+            <h3>$15,000</h3>
+
+            </div>
+            <div class="text-r">
+              <p>View Details</p>
+            </div>
+            </div>
+        </div>
+        <div class="latest-card">
+          <div class="card-top">
+            <img src="./images/latest3.png" alt="">
+          </div>
+          <h3>T-Cross – 2023</h3>
+          <p>4.0 D5 PowerPulse Momentum 5dr AWD…</p>
+          <div class="icon-wrapper">
+            <div class="card-icon">
+              <img src="./images/card-icon1.png" alt=""><br>
+              <span>15 Miles</span>
+            </div>
+            <div class="card-icon">
+              <img src="./images/card-icon2.png" alt=""><br>
+              <span>15 Miles</span>
+            </div>
+            <div class="card-icon">
+              <img src="./images/card-icon3.png" alt=""><br>
+              <span>CVT</span>
+            </div>
+          </div>
+          <div class="text">
+            <div class="text-l">
+            <h3>$15,000</h3>
+
+            </div>
+            <div class="text-r">
+              <p>View Details</p>
+            </div>
+            </div>
+        </div>
+        <div class="latest-card">
+          <div class="card-top">
+            <img src="./images/latest4.png" alt="">
+          </div>
+          <h3>T-Cross – 2023</h3>
+          <p>4.0 D5 PowerPulse Momentum 5dr AWD…</p>
+          <div class="icon-wrapper">
+            <div class="card-icon">
+              <img src="./images/card-icon1.png" alt=""><br>
+              <span>15 Miles</span>
+            </div>
+            <div class="card-icon">
+              <img src="./images/card-icon2.png" alt=""><br>
+              <span>15 Miles</span>
+            </div>
+            <div class="card-icon">
+              <img src="./images/card-icon3.png" alt=""><br>
+              <span>CVT</span>
+            </div>
+          </div>
+          <div class="text">
+            <div class="text-l">
+            <h3>$15,000</h3>
+
+            </div>
+            <div class="text-r">
+              <p>View Details</p>
+            </div>
+            </div>
+        </div>
       </div>
     </div>
 
-    <div data-aos="zoom-out-up" class="great container">
+    <div data-aos="zoom-out" class="great container">
       <center>
         <div class="great-top">
           <h1>Need Some Inspiration?</h1>
@@ -312,36 +543,36 @@
       </div>
     </div>
 
-    <div class="team">
+    <div data-aos="zoom-out-up" class="team">
       <div class="team-top">
         <h1>Our Team</h1>
       </div>
 
       <div class="team-wrapper">
-        <div data-aos="zoom-out-right" class="team-card team1">
+        <div  class="team-card team1">
           <h3>Courtney Henry</h3>
           <p>Development Manager</p>
         </div>
-        <div data-aos="zoom-out-right" class="team-card team2">
+        <div  class="team-card team2">
           <h3>Jerome Bell</h3>
           <p>Software Developer</p>
         </div>
-        <div data-aos="zoom-out-right" class="team-card team3">
+        <div  class="team-card team3">
           <h3>Jerome Bell</h3>
           <p>Software Tester</p>
         </div>
-        <div ata-aos="zoom-in-left" class="team-card team4">
+        <di class="team-card team4">
           <h3>Arlene McCoy</h3>
           <p>Arlene McCoy</p>
-        </div>
-        <divv ata-aos="zoom-in-left" class="team-card team5">
+        </di>
+        <div class="team-card team5">
           <h3>Jenny Wilson</h3>
           <p>UI/UX Designer</p>
-        </divv>
+        </div>
       </div>
     </div>
 
-    <div data-aos="zoom-out-down" class="blog">
+    <div  data-aos="zoom-out" class="blog">
       <div class="blog-top">
         <h1>Latest Blog Posts</h1>
       </div>
